objects/Award__c.object
<CustomObject>
    <fields>
        <fullName>Requires_IOAA_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the saved award requires IOAA approval. The box should be read-only in the permission set and layout and should only be updated by Apex logic.</description>
        <label>Requires IOAA Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Supervisor_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the saved award requires Supervisor approval. The box should be read-only in the permission set and page layout and should be updated solely by Apex logic.</description>
        <label>Requires Supervisor Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STAA_Award_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>STAA Award Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Send_Back_to_RO_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that will kickoff process builder that will invoke the send back to RO flow</description>
        <label>Send Back to RO Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Back_to_RO_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if the award was sent back to the RO by HRD.</description>
        <label>Sent Back to RO Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Back_to_RO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the award was sent back to the RO. The checkbox is unchecked once the pending approvals are rejected via apex.</description>
        <label>Sent Back to RO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_OHR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the record had been sent to OHR (Shared Services Center).</description>
        <label>Sent to OHR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending Direct Supervisor Approval</fullName>
                </value>
                <value>
                    <fullName>HR Review</fullName>
                </value>
                <value>
                    <fullName>Sent for Union Review</fullName>
                </value>
                <value>
                    <fullName>Ready for FPPS</fullName>
                </value>
                <value>
                    <fullName>Entered into FPPS</fullName>
                </value>
                <value>
                    <fullName>Ready for Bulk Upload</fullName>
                </value>
                <value>
                    <fullName>Bulk Uploaded</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Awaiting Funding</fullName>
                    <isActive>false</isActive>
                    <label>Awaiting Funding</label>
                </value>
                <value>
                    <fullName>Funded</fullName>
                    <isActive>false</isActive>
                    <label>Funded</label>
                </value>
                <value>
                    <fullName>Partially Paid</fullName>
                    <isActive>false</isActive>
                    <label>Partially Paid</label>
                </value>
                <value>
                    <fullName>Ready for SSC</fullName>
                    <isActive>false</isActive>
                    <label>Ready for SSC</label>
                </value>
                <value>
                    <fullName>Ready for Work Codes</fullName>
                    <isActive>false</isActive>
                    <label>Ready for Work Codes</label>
                </value>
                <value>
                    <fullName>Received by OARS/Approved</fullName>
                    <isActive>false</isActive>
                    <label>Received by OARS/Approved</label>
                </value>
                <value>
                    <fullName>Reference</fullName>
                    <isActive>false</isActive>
                    <label>Reference</label>
                </value>
                <value>
                    <fullName>To SSC</fullName>
                    <isActive>false</isActive>
                    <label>To SSC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <formula>Emp_Name__r.Step__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Step</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supervisor_Approval_Date__c</fullName>
        <description>Date Supervisor approves the record. If the record is automatically approved (doesn't require Supervisor approval), approval date will equal submitted date.</description>
        <label>AO Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supervisor_Justification__c</fullName>
        <inlineHelpText>If using the group award functionality, this field will automatically assume the justification of the group award.</inlineHelpText>
        <label>Supervisor Justification</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supervisors__c</fullName>
        <formula>Emp_Name__r.Supervisors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervisors</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TO_Award_Counter__c</fullName>
        <description>Set by code. Counts the number of time off awards submitted for an awardee.</description>
        <inlineHelpText>Counts the number of time off awards for an awardee in a fiscal year. The count disregards awards manually entered into FPPS. Please reference this field when deciding if the award should be included in the bulk upload.</inlineHelpText>
        <label>TO Award Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TO_Calendar_Year__c</fullName>
        <formula>YEAR( Planned_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TO Calendar Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Off_Amount__c</fullName>
        <description>Amount of time-off hours given to employee.</description>
        <inlineHelpText>Time Off awards greater than 10 hours require AO approval.</inlineHelpText>
        <label>Time Off Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Off_PPD__c</fullName>
        <description>Picklist for the calendar pay period the award is expected to be paid out during. ARTT. Justin Dove 6.14.2018</description>
        <inlineHelpText>Please use for Time Off. Use the Calendar Pay Period (Cash) for Cash, OTS, and QSI.</inlineHelpText>
        <label>Calendar Pay Period (Time Off)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>201722</fullName>
                </value>
                <value>
                    <fullName>201723</fullName>
                </value>
                <value>
                    <fullName>201724</fullName>
                </value>
                <value>
                    <fullName>201725</fullName>
                </value>
                <value>
                    <fullName>201726</fullName>
                </value>
                <value>
                    <fullName>201801</fullName>
                </value>
                <value>
                    <fullName>201802</fullName>
                </value>
                <value>
                    <fullName>201803</fullName>
                </value>
                <value>
                    <fullName>201804</fullName>
                </value>
                <value>
                    <fullName>201805</fullName>
                </value>
                <value>
                    <fullName>201806</fullName>
                </value>
                <value>
                    <fullName>201807</fullName>
                </value>
                <value>
                    <fullName>201808</fullName>
                </value>
                <value>
                    <fullName>201809</fullName>
                </value>
                <value>
                    <fullName>201810</fullName>
                </value>
                <value>
                    <fullName>201811</fullName>
                </value>
                <value>
                    <fullName>201812</fullName>
                </value>
                <value>
                    <fullName>201813</fullName>
                </value>
                <value>
                    <fullName>201814</fullName>
                </value>
                <value>
                    <fullName>201815</fullName>
                </value>
                <value>
                    <fullName>201816</fullName>
                </value>
                <value>
                    <fullName>201817</fullName>
                </value>
                <value>
                    <fullName>201818</fullName>
                </value>
                <value>
                    <fullName>201819</fullName>
                </value>
                <value>
                    <fullName>201820</fullName>
                </value>
                <value>
                    <fullName>201821</fullName>
                </value>
                <value>
                    <fullName>201822</fullName>
                </value>
                <value>
                    <fullName>201823</fullName>
                </value>
                <value>
                    <fullName>201824</fullName>
                </value>
                <value>
                    <fullName>201825</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_42_SL_ST_Award_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Title 42,SL, ST Award Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Emp_Name__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Award_Amount_on_Submit__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Reports the cumulative value of cash awards the Awardee has received FY to date, at the time of the award submission.</description>
        <inlineHelpText>Reports the cumulative value of cash awards the Awardee has received or that have been submitted within ARTT FY to date, at the time of the award submission.</inlineHelpText>
        <label>Total Awards on Submit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Time_Off_on_Submit__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Reports the cumulative value of time off awards the Awardee has received CY to date, at the time of the award submission.</description>
        <inlineHelpText>Reports the cumulative value of time off awards the Awardee has received or that have been submitted within ARTT CY to date, at the time of the award submission.</inlineHelpText>
        <label>Total Time Off on Submit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Two_Page_Form_Required__c</fullName>
        <formula>Requires_IOAA_Approval__c ||  Requires_Supervisor_Approval__c || Outside_ORD__c || Outside_Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2-Page Form Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Benefit__c</fullName>
        <label>Type of Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tangible</fullName>
                </value>
                <value>
                    <fullName>Intangible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Union_Rejected_Date__c</fullName>
        <description>Date the Union Rejected the Award</description>
        <inlineHelpText>Date the Union Rejected the Award</inlineHelpText>
        <label>Union Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Union_Review_Date__c</fullName>
        <description>Date award was sent for union review, if necessary.</description>
        <label>Union Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Union_Review_Status__c</fullName>
        <description>Status of an award when under union review consideration.</description>
        <label>Union Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent for Union Review</fullName>
                </value>
                <value>
                    <fullName>Union Approved</fullName>
                </value>
                <value>
                    <fullName>Union Rejected</fullName>
                </value>
                <value>
                    <fullName>Union Review Not Necessary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_and_Application__c</fullName>
        <description>Combined Value of Benefit and Extent of Application field with corresponding amount ranges.</description>
        <inlineHelpText>Select the applicable Value of Benefit and Extent of Application combination. The Cash Award amount will be restricted based on the corresponding amount range.</inlineHelpText>
        <label>Value and Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MODERATE VALUE &amp; LIMITED APPLICATION ($25-125)</fullName>
                </value>
                <value>
                    <fullName>MODERATE VALUE &amp; EXTENDED APPLICATION ($125-325)</fullName>
                </value>
                <value>
                    <fullName>MODERATE VALUE &amp; BROAD APPLICATION ($325-650)</fullName>
                </value>
                <value>
                    <fullName>MODERATE VALUE &amp; GENERAL APPLICATION ($650-1,300)</fullName>
                </value>
                <value>
                    <fullName>SUBSTANTIAL VALUE &amp; LIMITED APPLICATION ($125-325)</fullName>
                </value>
                <value>
                    <fullName>SUBSTANTIAL VALUE &amp; EXTENDED APPLICATION ($325-650)</fullName>
                </value>
                <value>
                    <fullName>SUBSTANTIAL VALUE &amp; BROAD APPLICATION ($650-1,300)</fullName>
                </value>
                <value>
                    <fullName>SUBSTANTIAL VALUE &amp; GENERAL APPLICATION ($1,300-3,100)</fullName>
                </value>
                <value>
                    <fullName>HIGH VALUE &amp; LIMITED APPLICATION ($325-650)</fullName>
                </value>
                <value>
                    <fullName>HIGH VALUE &amp; EXTENDED APPLICATION ($650-1,300)</fullName>
                </value>
                <value>
                    <fullName>HIGH VALUE &amp; BROAD APPLICATION ($1,300-3,150)</fullName>
                </value>
                <value>
                    <fullName>HIGH VALUE &amp; GENERAL APPLICATION ($3,150-5,000)</fullName>
                </value>
                <value>
                    <fullName>EXCEPTIONAL VALUE &amp; LIMITED APPLICATION ($650-1,300)</fullName>
                </value>
                <value>
                    <fullName>EXCEPTIONAL VALUE &amp; EXTENDED APPLICATION ($1,300-3,150)</fullName>
                </value>
                <value>
                    <fullName>EXCEPTIONAL VALUE &amp; BROAD APPLICATION ($3,150-6,000)</fullName>
                </value>
                <value>
                    <fullName>EXCEPTIONAL VALUE &amp; BROAD APPLICATION ($3,150-5,000)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_of_Benefit__c</fullName>
        <description>Value of Benefit as defined on EPA's recommendation for incentive award form.</description>
        <label>Value of Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Substantial</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Exceptional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Code_Lookup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT ENTERED BY REQUESTING OFFICIAL!</inlineHelpText>
        <label>Work Code Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Awards (Cost Center)</relationshipLabel>
        <relationshipName>Cost_Center</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Code__c</fullName>
        <formula>IF( NOT( ISBLANK( RO_HR_Org2__c ) ), RO_HR_Org2__r.Code__c, NULL )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Code</label>
        <type>Text</type>
    </fields>
    <description>Award given to employee (or eventually to other recipients).  First used in AART.</description>
    <label>Award</label>
    <nameField>
        <displayFormat>AWARD-{0000000}</displayFormat>
        <label>Award Internal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Awards</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Emp_Name__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Division__c</columns>
        <columns>Branch__c</columns>
        <columns>LCO__c</columns>
        <columns>Award_Type__c</columns>
        <columns>Cash_Award_Amount__c</columns>
        <columns>Time_Off_Amount__c</columns>
        <columns>Submitted_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Entered_into_FPPS</fullName>
        <columns>NAME</columns>
        <columns>Cash_Award_Counter__c</columns>
        <columns>Emp_Name__c</columns>
        <columns>Requesting_Official_Supervisor__c</columns>
        <columns>RO_HR_Org2__c</columns>
        <columns>Cash_Award_Amount__c</columns>
        <columns>Time_Off_Amount__c</columns>
        <columns>Group_Award_Name__c</columns>
        <columns>QSI__c</columns>
        <columns>Status__c</columns>
        <columns>Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Entered into FPPS</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award__c.Cash_Award,Award__c.OTS_Award,Award__c.QSI_Award,Award__c.Time_Off_Award</value>
        </filters>
        <label>Entered into FPPS</label>
    </listViews>
    <listViews>
        <fullName>My_Planned_Awards</fullName>
        <columns>NAME</columns>
        <columns>Emp_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Branch__c</columns>
        <columns>Requesting_Official__c</columns>
        <columns>Budget__c</columns>
        <columns>RO_HR_Code__c</columns>
        <columns>Cash_Award_Amount__c</columns>
        <columns>Time_Off_Amount__c</columns>
        <columns>Group_Award_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Planned</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award__c.Cash_Award,Award__c.QSI_Award,Award__c.Time_Off_Award</value>
        </filters>
        <label>My Planned Awards</label>
    </listViews>
    <listViews>
        <fullName>Ready_for_Bulk_Upload</fullName>
        <columns>NAME</columns>
        <columns>Cash_Award_Counter__c</columns>
        <columns>Emp_Name__c</columns>
        <columns>Requesting_Official_Supervisor__c</columns>
        <columns>RO_HR_Org2__c</columns>
        <columns>Cash_Award_Amount__c</columns>
        <columns>Time_Off_Amount__c</columns>
        <columns>Group_Award_Name__c</columns>
        <columns>QSI__c</columns>
        <columns>Status__c</columns>
        <columns>Budget__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready for Bulk Upload</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award__c.Cash_Award,Award__c.OTS_Award,Award__c.QSI_Award,Award__c.Time_Off_Award</value>
        </filters>
        <label>Ready for Bulk Upload</label>
    </listViews>
    <listViews>
        <fullName>Ready_for_FPPS</fullName>
        <columns>NAME</columns>
        <columns>Emp_Name__c</columns>
        <columns>RO_HR_Org2__c</columns>
        <columns>Time_Off_Amount__c</columns>
        <columns>FPPS_Number_Time_Off__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready for FPPS</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award__c.Cash_Award,Award__c.OTS_Award,Award__c.QSI_Award,Award__c.Time_Off_Award</value>
        </filters>
        <label>Ready for FPPS</label>
    </listViews>
    <listViews>
        <fullName>SL_ST_Title_42_Special_Act_Awards</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Emp_Name__c</columns>
        <columns>Requesting_Official_Supervisor__c</columns>
        <columns>RO_HR_Org2__c</columns>
        <columns>Cash_Award_Amount__c</columns>
        <columns>Time_Off_Amount__c</columns>
        <columns>Group_Award_Name__c</columns>
        <columns>QSI__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award__c.Cash_Award,Award__c.OTS_Award,Award__c.QSI_Award,Award__c.Time_Off_Award</value>
        </filters>
        <filters>
            <field>Pay_Plan__c</field>
            <operation>equals</operation>
            <value>SL</value>
        </filters>
        <filters>
            <field>Pay_Plan__c</field>
            <operation>equals</operation>
            <value>ST</value>
        </filters>
        <filters>
            <field>Pay_Plan__c</field>
            <operation>equals</operation>
            <value>AD</value>
        </filters>
        <label>SL/ST/Title 42 Special Act Awards</label>
    </listViews>
    <listViews>
        <fullName>Sent_Back_to_RO</fullName>
        <columns>NAME</columns>
        <columns>Emp_Name__c</columns>
        <columns>Requesting_Official_Supervisor__c</columns>
        <columns>RO_HR_Org2__c</columns>
        <columns>Cash_Award_Amount__c</columns>
        <columns>Time_Off_Amount__c</columns>
        <columns>Group_Award_Name__c</columns>
        <columns>QSI__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Planned</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award__c.Cash_Award,Award__c.OTS_Award,Award__c.QSI_Award,Award__c.Time_Off_Award</value>
        </filters>
        <filters>
            <field>Sent_Back_to_RO_Filter__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Sent Back to RO</label>
    </listViews>
    <listViews>
        <fullName>Submitted</fullName>
        <columns>NAME</columns>
        <columns>Emp_Name__c</columns>
        <columns>Requesting_Official__c</columns>
        <columns>Awardee_Direct_Supervisor__c</columns>
        <columns>Status__c</columns>
        <columns>Division__c</columns>
        <columns>Branch__c</columns>
        <columns>Cash_Award_Amount__c</columns>
        <columns>Time_Off_Amount__c</columns>
        <columns>Group_Award_Name__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Award_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>2019</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Planned</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Pending Direct Supervisor Approval,HR Review,Sent for Union Review,Ready for FPPS,Entered into FPPS,Ready for Bulk Upload,Bulk Uploaded,Paid</value>
        </filters>
        <label>Submitted</label>
    </listViews>
    <recordTypes>
        <fullName>Cash_Award</fullName>
        <active>true</active>
        <label>Cash Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>OTS_Award</fullName>
        <active>true</active>
        <label>OTS Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>QSI_Award</fullName>
        <active>true</active>
        <label>QSI Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Award</fullName>
        <active>true</active>
        <description>Standard Award record type.</description>
        <label>Standard Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>Time_Off_Award</fullName>
        <active>true</active>
        <label>Time Off Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>Title_42_SL_ST</fullName>
        <active>true</active>
        <label>Title 42/SL/ST</label>
    </recordTypes>
    <validationRules>
        <fullName>ARTT_Cannot_Bulk_Upload_5k</fullName>
        <active>false</active>
        <description>Cannont upload an award 5k or more, or an award that sends the awardee over 5k for the year.</description>
        <errorConditionFormula>(RecordType.DeveloperName = "Cash_Award") &amp;&amp;
    (Total_Award_Amount_on_Submit__c &gt; 5000) 
        &amp;&amp;  Include_in_Bulk_Upload__c = TRUE</errorConditionFormula>
        <errorMessage>An award $5k or more, or an award that sends the awardee over $5k cannot be bulk uploaded.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ARTT_FPPS_Change</fullName>
        <active>false</active>
        <description>Restricts the users from changing the FPPS # out of process.</description>
        <errorConditionFormula>NOT( OR(ISPICKVAL(Status__c, "Ready for FPPS"), ISPICKVAL(Status__c, "To SSC"), ISPICKVAL(Status__c, "Paid"),  ISPICKVAL(Status__c, "Reference")) ) &amp;&amp; ( ISCHANGED(FPPS_Number__c) )</errorConditionFormula>
        <errorMessage>You cannot update the FPPS # prior to the Ready for FPPS status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ARTT_To_OHR_Change</fullName>
        <active>true</active>
        <description>Restricts the users from changing the Sent to OHR field out of process.</description>
        <errorConditionFormula>NOT( OR(ISPICKVAL(Status__c, "Ready for SSC"), ISPICKVAL(Status__c, "To SSC"), ISPICKVAL(Status__c, "Paid"), ISPICKVAL(Status__c, "Funded"), ISPICKVAL(Status__c, "Reference")) ) &amp;&amp; OR( ISCHANGED( Sent_to_OHR__c ))</errorConditionFormula>
        <errorMessage>You cannot update the FPPS # prior to the Ready for SSC or To SSC statuses.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Change_Group_Award_After_Submit</fullName>
        <active>true</active>
        <description>Prohibits users from changing the group award lookup post submission</description>
        <errorConditionFormula>(NOT ISPICKVAL(Status__c, "Planned" )) &amp;&amp; ISCHANGED(Group_Award_Name__c)</errorConditionFormula>
        <errorMessage>You cannot add the award or remove the award from a Group Award post submission.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contractors_Cannot_Receive_Awards</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL(Emp_Name__r.Person_Type__c, "Contractor"),
ISPICKVAL(Emp_Name__r.Person_Type__c, "External"))</errorConditionFormula>
        <errorMessage>Contractors or External users cannot receive awards.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Entered_into_FPPS_and_FPPS_Num_Blank</fullName>
        <active>true</active>
        <description>You must include the FPPS # if the award is entered into FPPS.</description>
        <errorConditionFormula>ISCHANGED( Entered_into_FPPS__c) &amp;&amp; ISBLANK( FPPS_Number__c)</errorConditionFormula>
        <errorMessage>You must include the FPPS # if you're entering the award into FPPS.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Entered_into_FPPS_and_Include_in_Bulk</fullName>
        <active>true</active>
        <description>You cannot include in bulk upload and enter into FPPS</description>
        <errorConditionFormula>Entered_into_FPPS__c = TRUE &amp;&amp;   Include_in_Bulk_Upload__c = TRUE</errorConditionFormula>
        <errorMessage>You cannot include the award in bulk upload and enter the award into FPPS.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Group_Awards_Can_Not_be_Bulk_Uploaded</fullName>
        <active>true</active>
        <description>Group awards cannot be bulk uploaded, so this stops users from selected add to bulk upload.</description>
        <errorConditionFormula>NOT ISBLANK( Group_Award_Name__c ) &amp;&amp;  Include_in_Bulk_Upload__c = TRUE</errorConditionFormula>
        <errorMessage>Group Awards cannot be bulk uploaded. Please enter the group awards into FPPS.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HR_Review_Order</fullName>
        <active>true</active>
        <description>Cannot edit the HR Reviewed checkbox outside of HR Review</description>
        <errorConditionFormula>NOT(ISPICKVAL(Status__c, "HR Review") ) &amp;&amp; ( ISCHANGED(  HR_Reviewed__c ) )</errorConditionFormula>
        <errorMessage>You cannot edit HR Reviewed outside of the HR Review status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NonAdmins_Cannot_Change_Dates_and_Status</fullName>
        <active>false</active>
        <description>Stops Non-Admins from editing dates and status. Needed because they have perm set level permissions on the fields so they can run screen flows, but can't change in the record.</description>
        <errorConditionFormula>NOT( $Permission.Awards_App_Admin_Access ) &amp;&amp; Bypass_Validation__c = FALSE &amp;&amp;
OR( ISCHANGED(  Date_Entered_into_FPPS__c ), 
ISCHANGED(  Date_Ready_for_Bulk_Upload__c ), 
ISCHANGED( Date_Ready_for_FPPS__c ),
ISCHANGED( IOAA_Approval_Date__c ), 
ISCHANGED( Submitted_Date__c ), 
ISCHANGED( Supervisor_Approval_Date__c ),
ISCHANGED(Union_Review_Date__c), 
ISCHANGED(  Status__c  ) )</errorConditionFormula>
        <errorMessage>You cannot change date or Status fields if you are not an admin.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_Planned_Award_Cannot_Change_Owners</fullName>
        <active>true</active>
        <description>An award that is not in the Planned stage cannot change owners.</description>
        <errorConditionFormula>ISCHANGED( OwnerId ) &amp;&amp; NOT(  ISPICKVAL(Status__c, "Planned") )</errorConditionFormula>
        <errorMessage>An award not in a Planned stage cannot change owners. Please contact administrative support for any questions and/or guidance.</errorMessage>
    </validationRules>
</CustomObject>